[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/BettingBox.gd" type="Script" id=1]
[ext_resource path="res://asset/bettingbox.png" type="Texture" id=2]
[ext_resource path="res://VarelaRound-Regular.ttf" type="DynamicFontData" id=3]


[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[node name="BettingBox" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.418121 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Blue" type="Button" parent="."]
margin_left = -188.0
margin_top = -66.0
margin_right = -73.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
text = "BLUE"
flat = true

[node name="Red" type="Button" parent="."]
margin_left = 72.7697
margin_top = -66.0
margin_right = 187.77
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
text = "RED"
flat = true

[node name="Yellow" type="Button" parent="."]
margin_left = -70.0
margin_top = -68.0
margin_right = 70.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 1 )
text = "YELLOW"
flat = true
[connection signal="pressed" from="Blue" to="." method="_on_Blue_pressed"]
[connection signal="pressed" from="Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="Yellow" to="." method="_on_Yellow_pressed"]
